--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha --harmony_destructuring tests",
     "cover": "node --harmony_destructuring ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha tests",
     "coveralls": "npm run cover && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
-   },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/schmitz1193/node-cal.git"
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/schmitz1193/node-cal#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "coveralls": "^2.11.6",
     "istanbul": "^0.4.2",
@@ -26,6 +27,8 @@
     "mocha-lcov-reporter": "^1.0.0"
   },
   "dependencies": {
+    "babel": "^6.3.26",
+    "babel-register": "^6.4.3",
     "lodash": "^4.0.1"
   }
 }
